--- a/jobs/dockerweb/Dockerfile
+++ b/jobs/dockerweb/Dockerfile
@@ -24,11 +24,11 @@ RUN apt-get update && \
         zlib1g-dev \
         libicu-dev \
         libxml2-dev \
-        libpq-dev && \
+        libpq-dev \
+        vim && \
     docker-php-ext-configure pgsql --with-pgsql=/usr/local/pgsql && \
     docker-php-ext-install pdo pdo_mysql pdo_pgsql zip intl xmlrpc soap opcache && \
     docker-php-ext-configure pdo_mysql --with-pdo-mysql=mysqlnd && \
-    apt-get install vim -y && \
     apt-get clean && rm -rf /var/lib/apt/lists/*
 
 COPY  . /var/www/html/
