Ajuste en dockerfile php library

--- a/jobs/dockerweb/Dockerfile
+++ b/jobs/dockerweb/Dockerfile
@@ -25,6 +25,7 @@ RUN apt-get update && \
         libicu-dev \
         libxml2-dev \
         libpq-dev \
+        libzip-dev \
         vim && \
     docker-php-ext-configure pgsql --with-pgsql=/usr/local/pgsql && \
     docker-php-ext-install pdo pdo_mysql pdo_pgsql zip intl xmlrpc soap opcache && \
